# fl-studio-mcp

./: .gitignore  CLAUDE.md  ComposeWithLLM.pyscript  INSTALL.md  README.md  SIGNAL_MCP_INTEGRATION.md  call_llm.pyscript  clean_installation.sh  fl_studio_auto_trigger.py  fl_studio_mcp_server.py  install_and_run.sh  install_fl_studio_mcp_server.sh  install_mcp_for_claude.sh  install_mcp_for_codex.sh  install_mcp_for_gemini.sh  install_prerequisites.sh  pyproject.toml  run_auto_trigger.sh  setup_auto_trigger.sh  stop_auto_trigger.sh
